--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -16,11 +16,11 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link rel="stylesheet" href="/src/index.css"> -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>
         // Initialize Eruda
         eruda.init();
-    </script>
+    </script> -->
 </head>
 
 <body>
